docs: overhaul README.md with detailed setup instructions, tech stack breakdown, and API documentation